- add component time field and time picker - fix background text area on dark mode - add react-focus-lock

--- a/src/components/text-area-field/styles.scss
+++ b/src/components/text-area-field/styles.scss
@@ -11,6 +11,11 @@
         overflow-y: auto;
         align-items: flex-start;
 
+        textarea{
+            background-color: transparent;
+            color: hsl(var(--color-neutral-1100));
+        }
+
         .grow-wrap {
             display: grid;
             width: 100%;
